[gd_scene load_steps=6 format=3 uid="uid://56lpctep3l7v"]

[ext_resource type="PackedScene" uid="uid://dafs75w0piw2p" path="res://scenes/Player.tscn" id="1_onqr8"]
[ext_resource type="Script" uid="uid://b5sq6tiw316pq" path="res://scenes/Game.gd" id="1_ycayy"]
[ext_resource type="PackedScene" uid="uid://0m4adu0ptjt7" path="res://src/UI/PauseMenu.tscn" id="2_y3j0m"]
[ext_resource type="Script" uid="uid://2pniuraunbsy" path="res://scenes/LevelSpawner.gd" id="2_ycayy"]
[ext_resource type="PackedScene" uid="uid://de1403bgftvag" path="res://src/UI/HUD.tscn" id="4_bw6k5"]

[node name="Game" type="Node3D"]
script = ExtResource("1_ycayy")

[node name="HUD" parent="." instance=ExtResource("4_bw6k5")]
mouse_filter = 2

[node name="PlayerContainer" type="Node3D" parent="."]

[node name="Player" parent="PlayerContainer" instance=ExtResource("1_onqr8")]

[node name="CameraBoom" type="SpringArm3D" parent="PlayerContainer/Player"]
transform = Transform3D(1, 0, 0, 0, 0.9659258, -0.25881904, 0, 0.25881904, 0.9659258, 0, 6.674652, 0)
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="PlayerContainer/Player/CameraBoom"]

[node name="LevelSpawner" type="Node3D" parent="."]
script = ExtResource("2_ycayy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.49236777, 0.5183789, -0.69918334, -0.13591659, 0.8392383, 0.52650344, 0.8597097, -0.16420272, 0.48367015, -20.806108, 11.102917, 8.517822)

[node name="PauseMenuLayer" parent="." instance=ExtResource("2_y3j0m")]

[connection signal="player_died" from="PlayerContainer/Player" to="." method="_on_player_player_died"]
